--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ img
         "text img";
 }
 
+/* The image gets too squished past a certain resolution, so I moved it below the text. */
 @media screen and (max-width: 600px)
 {
     #intro
@@ -93,7 +94,8 @@ img
     display: flex;
 }
 
-@media screen and (max-width:600px)
+/* Work in progress.  I'd like to make this turn into a 4x4 grid if possible. */
+@media screen and (max-width:600px) 
 {
     #gallery
     {
@@ -103,6 +105,7 @@ img
 
 footer
 {
-    text-align: center;
+    display: flex;
+    justify-content: space-between;
     background-color: #90BAED;
 }
