Added js file and hooked it to index.html

--- a/css/style.css
+++ b/css/style.css
@@ -108,4 +108,13 @@ footer
     display: flex;
     justify-content: space-between;
     background-color: #90BAED;
+    padding: 0.5rem;
+}
+
+#dark-mode
+{
+    display: inline-block;
+    padding: 2px;
+    background-color: #5e92d1;
+    border-radius: 5px;
 }
