--- a/css/style.css
+++ b/css/style.css
@@ -71,17 +71,20 @@ img
 #gallery
 {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 0.25em;
+    /* grid-auto-flow: dense; */
 }
 
-/* The image gets too squished past a certain resolution, so I moved it below the text. */
-@media screen and (max-width: 650px)
+#gallery img
 {
-    #intro
-    {
-        display: block;
-        height: fit-content;        
-    }
+    height: 100%;
+    object-fit: cover;
+}
+
+.long-grid-img
+{
+    grid-row: span 2;
 }
 
 .intro-header
@@ -104,12 +107,6 @@ img
     height: 100%;
     width: 100%;
     object-fit: cover;
-}
-
-/* Work in progress.  I'd like to make this turn into a 4x4 grid if possible. */
-@media screen and (max-width:600px) 
-{
-    
 }
 
 footer
@@ -150,4 +147,14 @@ footer
 textarea
 {
     resize: none;
+}
+
+/* The image gets too squished past a certain resolution, so I moved it below the text. */
+@media screen and (max-width: 600px)
+{
+    #intro
+    {
+        display: block;
+        height: fit-content;        
+    }
 }
