--- a/css/style.css
+++ b/css/style.css
@@ -68,25 +68,6 @@ img
 	column-gap: 1rem;
 }
 
-#gallery
-{
-	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	gap: 0.25em;
-	/* grid-auto-flow: dense; */
-}
-
-#gallery img
-{
-	height: 100%;
-	object-fit: cover;
-}
-
-.long-grid-img
-{
-	grid-row: span 2;
-}
-
 .intro-header
 {
 	grid-area: title;
@@ -130,7 +111,36 @@ footer
 	cursor:pointer;
 }
 
-/* contact.html specific IDs & selectors */
+
+/* -----gallery.html specific IDs & selectors----- */
+#gear-table
+{
+	width: 100%;
+}
+
+#gallery
+{
+	display: grid;
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+	gap: 0.25em;
+	/* grid-auto-flow: dense; */
+}
+
+#gallery img   /* Currently this is NOT actually specific to gallery.html, because the gallery index.html uses the same ID.*/
+{
+	height: 100%;
+	object-fit: cover;
+}
+
+
+
+.long-grid-img
+{
+	grid-row: span 2;
+}
+
+
+/* -----contact.html specific IDs & selectors----- */
 #contact-form
 {
 	padding: 1rem;
@@ -155,6 +165,8 @@ textarea
 {
 	resize: none;
 }
+
+/* -----media queries----- */
 
 /* The image gets too squished past a certain resolution, so I moved it below the text. */
 @media screen and (max-width: 600px)
