Add todo comments

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /* To-Do:
-- Align header levels.  It's not good practice to skip from h1 to h3. */
+Add a carousel
+Build out contact page
+Add alt-text
+*/
 
 /* color palette
 standard(light)
